--- a/index.html
+++ b/index.html
@@ -9,32 +9,40 @@
   </head>
   <body>
     <div class="container">
-      <nav class="header">
+      <header>
         <img src="images/logo.svg" alt="" />
-        <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Serviços</a></li>
-          <li><a href="#">Contato</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Serviços</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </nav>
+      </header>
 
       <main>
-        <section class="left">
+        <section>
           <img src="images/img1.png" alt="" />
-        </section>
-        <section class="right">
-          <h1>Seus dados estão <span>protegidos</span>?</h1>
-          <p>
-            A informação é fundamental e de
-            <strong>extrema importância</strong> para qualquer <br />empresa.
-          </p>
-          <p>
-            Aqui vai um <strong>texto</strong> como se fosse uma empresa de
-            <span>segurança da informação</span> apresentando o seu produto e
-            com o texto todo estilizado.
-          </p>
+          <div class="content">
+            <h1>Seus dados estão <span>protegidos</span>?</h1>
+            <p>
+              A informação é fundamental e de
+              <strong>extrema importância</strong> para qualquer empresa.
+            </p>
+            <p>
+              Aqui vai um <strong>texto</strong> como se fosse uma empresa de
+              <span>segurança da informação</span> apresentando o seu produto e
+              com o texto todo estilizado.
+            </p>
+          </div>
         </section>
       </main>
+
+      <footer>
+        <div class="line"></div>
+        <p>para mais informações nos siga no instagram @rocketsect</p>
+      </footer>
     </div>
+    <img src="images/padlock-decoration.svg" alt="" class="padlock" />
   </body>
 </html>
